Fixed partners page spacing

--- a/website/css/sass/app.scss
+++ b/website/css/sass/app.scss
@@ -1046,7 +1046,7 @@ h2
   border-top: solid 1px $secondaryGray;
   padding-top: 35px;
   border-bottom: solid 1px $secondaryGray;
-  padding-bottom: 35px;
+  padding-bottom: 15px;
 
   li
   {
@@ -1092,7 +1092,7 @@ h2
 
 #partnersBecome
 {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 50px;
 
 p
